# NedoRello

./: CMakeLists.txt  CMakeLists.txt.autosave  resourse.qrc
Assets/: resources.qrc  resourse.qrc
src/: main.cpp
src/passBD/: passdb.cpp  passdb.h
src/styleHelper/: styles.cpp  styles.h
src/windowsNedoRello/Board/: boardnedorello.cpp  boardnedorello.h  boardnedorello.ui  popup.cpp  popup.h
src/windowsNedoRello/Board/windowCreatedList/: windowcreatedlist.cpp  windowcreatedlist.h  windowcreatedlist.ui
src/windowsNedoRello/Cards/: cardnedorello.cpp  cardnedorello.h  cardnedorello.ui
src/windowsNedoRello/List/: listnedorello.cpp  listnedorello.h  listnedorello.ui
src/windowsNedoRello/List/windowCreateOrEditing/: windowcreateoreditingcard.cpp  windowcreateoreditingcard.h  windowcreateoreditingcard.ui
src/windowsNedoRello/accountWindow/: accountwindow.cpp  accountwindow.h  accountwindow.ui
src/windowsNedoRello/accountWindow/createBoard/: confirmationwindow.cpp  confirmationwindow.h  confirmationwindow.ui  createboard.cpp  createboard.h  createboard.ui
src/windowsNedoRello/accountWindow/inputBoard/: inputboard.cpp  inputboard.h  inputboard.ui
src/windowsNedoRello/combiningSecondaryWindows/: combiningwindows.cpp  combiningwindows.h
src/windowsNedoRello/firstWindow/: firstwindow.cpp  firstwindow.h  firstwindow.ui
src/windowsNedoRello/registrationWindow/: registrationwindow.cpp  registrationwindow.h  registrationwindow.ui
